--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <title>Painel de Pontuação</title>
+  <title>PONTUAÇÃO DOS JOGADORES</title>
 
   <!-- Firebase -->
   <script src="firebase-config.js"></script>
