--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </style>
 </head>
 <body>
-  <h1 class="painel">Painel de Pontuação</h1>
+  <h1 class="painel">PONTUAÇÃO DOS JOGADORES</h1>
 
   <div id="form" class="painel">
     <input type="text" id="nome" placeholder="Nome do jogador" />
