--- a/index.html
+++ b/index.html
@@ -13,16 +13,19 @@
   <link href="https://fonts.cdnfonts.com/css/averta" rel="stylesheet">
 
   <style>
-    body {
-      background-image: url('https://willianpesenti.github.io/jogadorespontuacao/BG_Branco_Diguinho.png');
-      background-size: auto;
-      background-repeat: repeat;
-      background-position: top left;
-      background-attachment: fixed;
-      min-height: 100vh;
-      margin: 0;
-      font-family: 'Averta', sans-serif;
-    }
+ body {
+  margin: 0;
+  background: url('https://willianpesenti.github.io/jogadorespontuacao/BG_Estadio_M360.png') no-repeat center center fixed;
+  background-size: cover;
+  font-family: 'Averta', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  padding: 120px 40px 40px 40px; /* espaçamento superior ajustado */
+  color: #fff;
+}
+
 
     h1, h2, strong {
       color: #000;
