--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
   <style>
  body {
   margin: 0;
-  background: url('https://willianpesenti.github.io/jogadorespontuacao/BG_Estadio_M360.png') no-repeat center center fixed;
+  background: url('https://willianpesenti.github.io/jogadorespontuacao/BG_Branco_Diguinho.png') no-repeat center center fixed;
   background-size: cover;
   font-family: 'Averta', sans-serif;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  padding: 120px 40px 40px 40px; /* espaçamento superior ajustado */
+  padding: 120px 40px 40px 40px;
   color: #fff;
 }
+
 
 
     h1, h2, strong {
